--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -10,7 +10,16 @@ ethers = { git = "https://github.com/gakonst/ethers-rs" }
 eyre = "0.6"
 serde_json = "1.0.64"
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
+reqwest = { version = "0.11" }
 
 [[bin]]
 name = "ens"
 path = "src/ens.rs"
+
+[[bin]]
+name = "contract_with_abi"
+path = "src/contract_with_abi.rs"
+
+[[bin]]
+name = "request"
+path = "src/get_reqwest.rs"
