succeeded to hyper

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,7 +11,8 @@ eyre = "0.6"
 serde_json = "1.0.64"
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
 reqwest = { version = "0.11" }
-
+ipfs-api-backend-hyper = "0.5" 
+hyper = { version = "0.14", features = ["full"] }
 [[bin]]
 name = "ens"
 path = "src/ens.rs"
@@ -23,3 +24,11 @@ path = "src/contract_with_abi.rs"
 [[bin]]
 name = "request"
 path = "src/get_reqwest.rs"
+
+[[bin]]
+name = "ipfs"
+path = "src/ipfs.rs"
+
+[[bin]]
+name = "hyper"
+path = "src/hyper.rs"
