--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 
 [dependencies]
 yew = "0.19"
-ethers = { version = "1.0.0" }
+ethers = { version = "1.0.0", features = ["abigen"] }
+serde = { version = "1.0.0", features = ["derive"] }
+serde_json = "1.0"
