--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -9,3 +9,5 @@ yew = "0.19"
 ethers = { version = "1.0.0", features = ["abigen"] }
 serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0"
+ethers-core = "1.0.0"
+ethers-contract = "1.0.0"
