--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,3 +11,5 @@ serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0"
 ethers-core = "1.0.0"
 ethers-contract = "1.0.0"
+web-sys = "0.3.60"
+wasm-bindgen-futures = "0.4.33"
