--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -13,3 +13,5 @@ ethers-core = "1.0.0"
 ethers-contract = "1.0.0"
 web-sys = "0.3.60"
 wasm-bindgen-futures = "0.4.33"
+gloo-net = "0.2.4"
+wasm-bindgen = "0.2.83"
